Add macOS build to Azure pipelines as CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,8 @@ pr:
 jobs:
 - template: .azure-templates/linux.yml
 
+- template: .azure-templates/osx.yml
+
 - template: .azure-templates/win.yml
 
 schedules:
