Fix win and macos host images names in Azure pipelines

--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -3,7 +3,7 @@ jobs:
   displayName: MacOS
 
   pool:
-    vmImage: 'macos-latest'
+    vmImage: 'macOS-latest'
   strategy:
     matrix:
       Python37:
