--- a/.azure-templates/win.yml
+++ b/.azure-templates/win.yml
@@ -3,7 +3,7 @@ jobs:
   displayName: 'Windows 2019'
 
   pool:
-    vmImage: 'windows-2019'
+    vmImage: 'windows-latest'
   strategy:
     matrix:
       Python37:
