--- a/.azure-templates/osx.yml
+++ b/.azure-templates/osx.yml
@@ -16,7 +16,12 @@ jobs:
     displayName: 'Use Python $(python.version)'
 
   - bash: echo "##vso[task.prependpath]$CONDA/bin"
-    displayName: 'Add conda to PATH'
+    displayName: Add conda to PATH
+
+    # On Hosted macOS, the agent user doesn't have ownership of Miniconda's installation directory/
+    # We need to take ownership if we want to update conda or install packages globally
+  - bash: sudo chown -R $USER $CONDA
+    displayName: Take ownership of conda installation
 
   - script: |
       conda config --system --set always_yes yes --set changeps1 no
